--- a/kernel-dts/jetson-platforms/tegra210-jetson-cv-power-fixed-p2180-p2597-a00.dtsi
+++ b/kernel-dts/jetson-platforms/tegra210-jetson-cv-power-fixed-p2180-p2597-a00.dtsi
@@ -60,7 +60,7 @@
 			regulator-min-microvolt = <1800000>;
 			regulator-max-microvolt = <1800000>;
 			regulator-boot-on;
-			gpio = <&gpio TEGRA_GPIO(V, 1) 0>;
+//			gpio = <&gpio TEGRA_GPIO(V, 1) 0>;
 			enable-active-high;
 		};
 
